--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="task1.html">Практическое задание №1</a>
     </li>
     <li>
-        <a href="task2.html">Практическое задание №2</a>
+        <a href="task2/task2.html">Практическое задание №2</a>
     </li>
    <li>
     <a href="">Практическое задание №3</a>
@@ -22,4 +22,5 @@
   </li> 
    </ol>
 </body>
+
 </html>
